--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,13 @@
       <version>7.0.3</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+    </dependency>
+
 
   </dependencies>
 </project>
